Added Webpack to the project and enabled CSS and JavaScript

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -4,11 +4,5 @@
 {% endblock %}
 
 {% block body %}
-	{{ author }}
-	<ol>
-		{% for movie in movies %}
-			<li>{{ movie }}</li>
-		{% endfor %}
-	</ol>
-
+	<h1>TEST</h1>
 {% endblock %}
