Added file-loader (package.json) for images

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -5,4 +5,6 @@
 
 {% block body %}
 	<h1>TEST</h1>
+	<div class="test">2nd css file testing</div>
+	<img class="testPhoto" src="{{ asset('build/images/image1.af97074f.jpg') }}" alt="">
 {% endblock %}
